--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && node dist/app.js"
+    "start": "nodemon src/app.ts",
+    "start:prod": "pm2 delete UpSkilling; pm2 start --name UpSkilling \"npx ts-node --transpile-only src/app.ts\""
   },
   "author": "Mina H Elias",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
     "@types/nodemailer": "^6.4.11",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
